Fix broken css

--- a/site/src/search/Results.css
+++ b/site/src/search/Results.css
@@ -11,5 +11,5 @@
 }
 
 .results-container {
-  margin: inherit !important;
+  margin: 0 !important;
 }
